--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -35,8 +35,19 @@
 
                 <div class="chat-avatar">{{ chat.title|first }}</div>
                 <div class="chat-header-info">
-                <h3 class="chat-title">{{ chat.title }}</h3>
-                <p class="chat-subtitle" style="font-size: 12.8px; color: #b3bc70;">{{ chat.latest_text|safe }}</p>
+                    <h3 class="chat-title">{{ chat.title }}</h3>
+                    <div style="gap: 5px;display: flex;align-items: center;">
+                        <div style="font-size: 12px; display: flex; gap: 2px; align-items: center;">
+                            {% if chat.seen_by_all %}
+                            <i class="fas fa-check" style="color:#a29bfe;position: relative; left: 7px;font-size: 10px;"></i>
+                            <i class="fas fa-check"style="color:#a29bfe;font-size: 10px;"></i>
+                            {% else %}
+                            <i class="fas fa-check"style="font-size: 10px;"></i>
+                            {% endif %}
+                        </div>
+                          
+                        <p class="chat-subtitle">{{ chat.latest_text|safe }}</p>
+                    </div>
                 </div>
                 <div style="max-width: 100px;gap: 10px;flex-direction: column;display: flex;">
                 <div style="justify-content: flex-end;align-items: center;display: flex;font-size: 12px;">{{ chat.unread_count }}</div>
