--- a/static/css/status.css
+++ b/static/css/status.css
@@ -12,6 +12,29 @@ body {
     background: white;
     color: #ffffff;
 }
+.status_text {
+    display: flex;
+    word-break: break-word;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: #7d7cd0;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    color: white;
+    font-size: clamp(6px, 5vw, 28px);
+    overflow-wrap: break-word;
+
+    /* Hide borders and outlines */
+    border: none;
+    outline: none;
+    box-shadow: none;
+
+    /* Optional */
+    resize: none;
+
+}
 
 .container {
     display: flex;
