--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -103,7 +103,7 @@
             {% for user in users %}
                 <div class="modal-option" data-user-id="{{ user.id }}">
                     <div class="option-icon">
-                        <img src="{{ user.profile_pic }}" style="height:100%; border-radius:50%;">
+                        <img src="{{ user.profile_pic }}" style="object-fit: cover;width: 100%;height:100%; border-radius:50%;">
                     </div>
                     <p class="user-name">{{ user.full_name }}</p>
                 </div>
